--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
     <footer class="footer">
         <p>&copy; 2024 Gabriel White Marín | Contact: gabedwardw@gmail.com | Phone: (469) 338-3251</p>
-        <p>Based in New Tampa, FL 33647</p>
+        <p>Based in Tampa Palms, FL 33647</p>
     </footer>
 </body>
 </html>
