--- a/index.html
+++ b/index.html
@@ -175,18 +175,18 @@
     <section id="intro" class="intro container">
         <h1>Get the Right Guy for D1-Quality General Labor. Currently Servicing Tampa.</h1>
         <img src="squarespace3.png" alt="squarespace3">
-        <p>Hi there! Thanks for checking out my website. My name is Gabriel and I'm a D1 rugby athlete based in Atlanta. I’m currently in Tampa for the summer, so I hope you will consider my services for whatever it is you may need!</p>
+        <p>Hi there! Thanks for checking out my website. My name is Gabriel, and I'm a D1 rugby athlete based in Atlanta. I’m currently in Tampa until August, so I hope you will consider my services for whatever it is you may need!</p>
     </section>
 
     <section id="services" class="services container">
         <h2>Feel Free to Browse These D1 Services!</h2>
         <div class="service">
-            <h3>4x6 Storage Shelves | $310</h3>
+            <h3>4x6 Storage Shelves | $400</h3>
             <img src="storageshelves1.png" alt="Storage Shelves">
             <p>These 8-foot by 8-foot shelves accommodate 24 standard yellow-top bins. Perfect for your garage or storage room!</p>
         </div>
         <div class="service">
-            <h3>Junk Removal | $75 - $100 Per Pickup Truck Load</h3>
+            <h3>Junk Removal | Contact for Estimate! </h3>
             <img src="junkremoval2.png" alt="Junk Removal">
             <p>Need to get rid of unwanted items? I offer efficient and affordable junk removal services.</p>
         </div>
@@ -211,7 +211,7 @@
     </section>
 
     <footer class="footer">
-        <p>&copy; 2024 Gabriel White Marín | Contact: gabedwardw@gmail.com | Phone: (469) 338-3251</p>
+        <p>&copy; 2024 Gabriel White Marín | Contact: gabedwardw@gmail.com </p>
         <p>Based in Tampa Palms, FL 33647</p>
     </footer>
 </body>
